# visiongate

./: .gitignore  Pipfile  README.md  cam.sh  docker-compose.yaml  ecam.sh  nginx.conf  postgresql.conf  pyproject.toml  requirements.txt  site.conf  webdav.sh  Итоговая_Аттестация.ipynb
data/: dml.sql  visiongate.sql
visiongate/: manage.py
visiongate/main/: admin.py  apps.py  ewelink.py  models.py  numberplate.py  views.py  views_1cam.bkp
visiongate/main/migrations/: 0001_initial.py  0002_alter_camera_code_alter_camera_url.py  0003_location.py  0004_location_changed_location_created_location_deleted_and_more.py  0005_remove_camera_address_camera_location.py  0006_camera_inout.py  0007_location_allowed.py  0008_event.py  0009_location_device_location_status_alter_event_created.py  0010_location_token.py  0011_event_status_alter_event_camera_alter_event_inout.py  0012_alter_event_inout_alter_event_status.py  0013_location_opened_by_location_opened_date_and_more.py  0014_event_image.py  0015_location_mode.py  0016_event_cloud_url.py  0017_event_user_alter_event_owner.py
visiongate/management/: admin.py  models.py  views.py
visiongate/management/migrations/: 0001_initial.py
visiongate/visiongate/: asgi.py  settings.py  urls.py  wsgi.py
